k8s/gke/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cre
  labels:
    name: cre
    marketplace.cloud.google.com/deployment: cre
